--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
