--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
