--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.14.0",
-    "node-sass": "^7.0.3",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -17,9 +17,11 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
-    "sass": "^1.56.1",
+    "sass": "^1.57.1",
     "styled-components": "^5.3.6",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
